Improve handling of published/unpublished data in downloads (#956)
* wip - team level downloads

* WIP refactor animal with get_published_only pattern

* update the rest of the animal viewset

* change permissions to team member or higher instead of can_edit

* lint

* update epi api and rename serializer

* update epi tests

* update downloads page

* add checkbox for inclusion of unpublished data

* remove checkbox from unsupported exports

* restore checkbox to some downloads

* remove unused template

* update in vitro and epimeta apis

* update ROB exports

* fixes from review

* only add the unpublished flag if the checkbox exists

* whitespace edits

---------

Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -20,12 +20,12 @@
           {% else %}
           <li class="list-group-item">
             {% url 'lit:api:assessment-reference-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' button_text="Reference Export" help_text="All references and tags." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' button_text="Reference Export" help_text="All references and tags." allow_unpublished=False %}
           </li>
           {% if obj_perms.edit and assessment.literature_settings.conflict_resolution %}
           <li class="list-group-item">
             {% url 'lit:api:assessment-user-tag-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' button_text='User Tag Reference Export' help_text="All references and tags, including user tags. Team members only." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' button_text='User Tag Reference Export' help_text="All references and tags, including user tags. Team members only." allow_unpublished=False %}
           </li>
           {% endif %}
           {% endif %}
