remove closing </input> from all cases

--- a/hawc/apps/animal/templates/animal/dosingregime_form.html
+++ b/hawc/apps/animal/templates/animal/dosingregime_form.html
@@ -14,8 +14,7 @@
 
     {% if dose_groups_errors %}<div class="alert alert-danger">{{dose_groups_errors|safe}}</div>{% endif %}
     <table id="dose_table" class="table table-sm table-striped"></table>
-    <input id="dose_groups_json" name="dose_groups_json" type="hidden"></input>
-
+    <input id="dose_groups_json" name="dose_groups_json" type="hidden" />
   </div>
 
 {% endblock %}
