--- a/hawc/templates/hawc/_delete_block.html
+++ b/hawc/templates/hawc/_delete_block.html
@@ -5,7 +5,7 @@
   {% if confirm %}
   <div id='deleteConfirm'>
     <b>Type "delete" to confirm:</b>
-    <input id="confirmationText" class="form-control" placeholder='Type "delete" to confirm'></input>
+    <input id="confirmationText" class="form-control" placeholder='Type "delete" to confirm' />
   </div>
   {% endif %}
 
