expand and center modals

--- a/hawc/apps/common/templates/common/modal_template.html
+++ b/hawc/apps/common/templates/common/modal_template.html
@@ -1,5 +1,5 @@
 <div id="{{ modal_id }}" class="modal fade" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="{{ modal_id }}-label" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable" role="document">
+    <div class="modal-dialog modal-dialog-scrollable justify-content-center" role="document">
         {% block modal_content_wrapper %}
         <div class="modal-content">
             <div class="modal-header">
