--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -170,7 +170,7 @@ input[type='number'] {
 }
 
 .modal-body {
-    max-height: 600px;
+    max-height: 75vh;
     overflow-y: auto;
 }
 .modal.fade.in {
