--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -170,7 +170,7 @@ input[type='number'] {
 }
 
 .modal-body {
-    max-height: 600px;
+    max-height: 75vh;
     overflow-y: auto;
 }
 .modal.fade.in {
@@ -805,6 +805,14 @@ table.bordered td {
 .htmx-swapping {
     opacity: 0;
     transition: opacity 1s ease-out;
+}
+.htmx-indicator {
+    opacity: 0;
+    transition: opacity 500ms ease-in;
+}
+.htmx-request .htmx-indicator,
+.htmx-request.htmx-indicator {
+    opacity: 1
 }
 
 /* fade in/out */
