--- a/hawc/apps/lit/templates/lit/conflict_resolution.html
+++ b/hawc/apps/lit/templates/lit/conflict_resolution.html
@@ -1,7 +1,13 @@
 {% extends 'assessment-rooted.html' %}
 
+{% load bs4 %}
 {% block content %}
-<h2>Resolve Tag Conflicts</h2>
+<div class="d-flex">
+    <h2>Resolve Tag Conflicts</h2>
+    {% actions %}
+    <a class="dropdown-item" data-toggle="modal" data-target="#bulk-merge-modal" hx-get="{% url 'lit:bulk-merge-conflicts' assessment.pk %}" hx-target="#bulk-merge-modal-content">Bulk Merge Conflicts</a>
+    {% endactions %}
+</div>
 {% include 'common/inline_filter_form.html' %}
 <ul class="list-group list-group-flush my-3">
     {% for ref in object_list %}
@@ -16,6 +22,7 @@
     {% endfor %}
 </ul>
 {% include "includes/paginator.html" with plural_object_name="conflicts" %}
+{% include "lit/components/bulk_merge_modal.html" with modal_id="bulk-merge-modal"%}
 {% endblock content %}
 
 {% block extrajs %}
