--- a/hawc/apps/lit/templates/lit/overview.html
+++ b/hawc/apps/lit/templates/lit/overview.html
@@ -9,7 +9,7 @@
         {% if obj_perms.edit_assessment %}
           <a class="dropdown-item" href="{{assessment.literature_settings.get_update_url}}">Update settings</a>
           <a class="dropdown-item" href="{% url 'lit:tags_update' assessment.pk %}">Update tags</a>
-          <a class="dropdown-item" href="{% url 'lit:workflows' assessment.pk %}">Workflows</a>
+          <a class="dropdown-item" href="{% url 'lit:workflows' assessment.pk %}">View Workflows</a>
         {% endif %}
         <div class="dropdown-divider"></div>
         <span class="dropdown-header">Searches and Imports</span>
