Lit Screening Workflows (#952)
* add tag deletion/addition filters

* spelling error

* fix filtering

* updates

* bulk merge tag conflicts

* updates

* remove merge_tags changes

* use deleted_tags field

* test

* update modals

* update migrations, add duplicate removal script

* use .distinct and .difference

* updates

* add cache

* deletion empty case fix

* add permissions check

* add test

* update css

* page refresh on modal close after merge

* add tag comparisons

* stupid easy fix for the bug that drove me crazy

* updates

* revert modal changes

* add assessment id check before merge

* workflows crud

* updates

* add filtering

* workflows everywhere

* form, migration updates

* add counts to overview

* simplify css

* apply constraint cleanup for both models

* DRY permissions check

* remove api endpoint; support form view for now

* use our django modal template

* disable cache_key field

* add description

* remove duplicate

* updates

* fix test

* tidy up

* add test

* add integration test

* css fix for prime

* tagging noop, css update

* lit review buttons style change

* for consistency, make all "Change logs" -> "View change logs"

* revert this change

* use set comparisons instead of numpy

* use boolean check instead of equality in template

* add docstring

* use kw names in func calls

* use TZ aware datetime

* write a flatten helper method

* minor docstring updates

* fix migration order

* remove unrelated change

* remove dangling </fieldset>

* remove closing </input> from all cases

* rename migration

* remove workflow from reference search page

* move workflows to top of literature review

* standardize trailing whitespace and endlines

* overview untagged stat fix

* remove unused pink class

* remove unused manager

* write a templatetag

* disable non htmx requests

* template e

--- a/hawc/apps/common/templates/common/htmx_autocomplete.html
+++ b/hawc/apps/common/templates/common/htmx_autocomplete.html
@@ -1,5 +1,8 @@
 {% load static %}
 <script type="text/javascript" src="{% static 'admin/js/vendor/select2/select2.full.js' %}"></script>
 <script type="text/javascript" src="{% static 'patched/dal/3.9.4/js/autocomplete_light.js' %}"></script>
+<link href="{% static 'admin/css/vendor/select2/select2.css' %}" media="screen" rel="stylesheet">
+<link href="{% static 'admin/css/autocomplete.css' %}" media="screen" rel="stylesheet">
+<link href="{% static 'patched/dal/3.9.4/css/select2-bootstrap.css' %}" media="screen" rel="stylesheet">
 <script type="text/javascript" src="{% static 'autocomplete_light/select2.js' %}"></script>
 <script type="text/javascript" src="{% static 'patched/dal/3.9.4/js/select2text.js' %}"></script>
