--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -79,19 +79,46 @@ tfoot > tr > td {
     overflow-y: auto;
     resize:vertical;
 }
+.vw50 {
+    max-width: 50vw;
+}
 .vw75 {
     max-width: 75vw;
 }
-.clickable {
+.clickable, .clickable .bg-gray {
     transition: background-color 0.25s ease;
 }
-.clickable:hover {
+.clickable:hover, .clickable:hover .bg-white {
     cursor: pointer;
-    background-color: #f3f3f3;
+    background-color: #f3f3f3 !important;
     text-decoration: none;
+}
+.box-shadow.clickable:hover {
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 3px 11px;
+}
+.box-shadow-minor.clickable:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 2px 2px 6px 0px;
+}
+.box-shadow.clickable, .box-shadow-minor.clickable {
+    transition: background-color 0.25s ease, box-shadow 0.25s ease;
+}
+.bg-lightblue {
+    background-color: #eaf6ff;
+}
+.bg-gray {
+    background-color: #e8e8e8;
+}
+.clickable:hover .bg-gray {
+    background-color: #d1d1d1;
 }
 .box-shadow {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.box-shadow-minor {
+    box-shadow: #0000003d 0px 1px 6px -1px;
+}
+.text-black {
+    color: black !important;
 }
 .dark-link, .dark-link:visited {
     color: #495057;
@@ -116,6 +143,21 @@ p {
 
 select[multiple]{
     resize: vertical;
+}
+
+fieldset.fieldset-border {
+    border: #c2c7c9 2px solid;
+    border-radius: 12px;
+    padding: 0.25rem 1rem;
+}
+
+fieldset.fieldset-border>legend {
+    width: fit-content;
+    margin-left: 0.2rem;
+    padding: 0rem 0.5rem;
+}
+fieldset.fieldset-border>div{
+    padding: 0 0.75rem;
 }
 
 /* BOOTSTRAP 4 OVERRIDES */
@@ -373,6 +415,11 @@ div.smart-tag.active {
     color: rgb(22, 46, 81);
     border: 2px dotted rgb(22, 46, 81);
     background-color: white;
+}
+.lit-review-box>.btn {
+    padding: 0.35rem;
+    width: 70%;
+    font-size: large;
 }
 #refFilter h4,
 #fullRefList p {
@@ -652,7 +699,7 @@ a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
     background-color: #eaf6ff;
 }
 
-#ff-expand-form .form-group {
+#ff-expand-form .form-group, .pad-form .form-group {
     padding: 0.2rem 0.75rem;
 }
 
