--- a/hawc/templates/hawc/_delete_block.html
+++ b/hawc/templates/hawc/_delete_block.html
@@ -5,7 +5,7 @@
   {% if confirm %}
   <div id='deleteConfirm'>
     <b>Type "delete" to confirm:</b>
-    <input id="confirmationText" class="form-control" placeholder='Type "delete" to confirm'></input>
+    <input id="confirmationText" class="form-control" placeholder='Type "delete" to confirm' />
   </div>
   {% endif %}
 
@@ -13,7 +13,6 @@
     <button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i>&nbsp;Delete {{name}}</button>
     <a href="{{cancel_url}}" class="btn btn-light ml-2">Cancel</a>
     {% csrf_token %}
-    </fieldset>
   </form>
 </div>
 
