--- a/hawc/apps/mgmt/templates/mgmt/fragments/task_form.html
+++ b/hawc/apps/mgmt/templates/mgmt/fragments/task_form.html
@@ -3,8 +3,8 @@
     {% crispy form %}
     <div class="d-block container">
       <div class="float-right">
-        <button class="btn btn-sm btn-info" hx-post="{% url 'mgmt:task-update' object.pk %}">Save</button>
-        <button class="btn btn-sm btn-light" hx-get="{% url 'mgmt:task-detail' object.pk %}"><i class="fa fa-fw fa-times mr-1"></i>Cancel</button>
+        <button class="btn btn-sm btn-info" hx-post="{% url 'mgmt:task-htmx' object.pk 'update' %}">Save</button>
+        <button class="btn btn-sm btn-light" hx-get="{% url 'mgmt:task-htmx' object.pk 'read' %}"><i class="fa fa-fw fa-times mr-1"></i>Cancel</button>
       </div>
     </div>
   </form>
